--- a/task_02/character.html
+++ b/task_02/character.html
@@ -6,10 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Main</title>
+    <title>Person card</title>
 </head>
 <body>
-    <div class="container" id="container"></div>
+    <div class="container" id="container-card"></div>
 
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -19,7 +19,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
 
-<script src="js/02_main_task.js"></script>
+<script src="js/02_character_task.js"></script>
 
 </body>
 </html>
